Toggle dropdown visibility on mouse down in DropDownViewer
Also use the recently introduced background-position theming for Text to
display the dropdown-icon.